fixed navbar background on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ margin: 0px;
 .navigation-primary {
     padding: 1em;
     width: 30%;
+    height: 95vh;
     background-color: #f7f6f3;
     /* color: #181610;  */
     /* color: rgba(25, 23, 17, 0.6); */
